Bug 412778 - fixing icon alignment in banner

--- a/bundles/org.eclipse.orion.client.ui/web/css/theme.css
+++ b/bundles/org.eclipse.orion.client.ui/web/css/theme.css
@@ -13,13 +13,12 @@
 	border: 0;
 	background-color: rgb(51, 51, 51);
 	height: 15px;
-	padding: 10px 3px 10px 10px;
+	padding: 10px 3px 6px 2px;
 	display: -webkit-box;
 	display: -moz-box;         /* OLD - Firefox 19- (buggy but mostly works) */
 	display: -ms-flexbox;     /* TWEENER - IE 10 */
 	display: -webkit-flex;     /* NEW - Chrome */
 	display: flex; 
-	width: calc(100% - 10px - 3px);
 	white-space: nowrap;
 }
 
